# cisort

./: README.md  cisort.py  main.cpp  parse.py  pyproject.toml  settings.py
.github/workflows/: workflow.yml
cisort/: cisort.py  config.py  data.json  parse.py  settings.py
cisort/config/: __init__.py  configs.py  constants.py
cisort/data/: libs.json
cisort/utils/: files.py  load_json.py  loader.py  parse.py
